--- a/deno.json
+++ b/deno.json
@@ -8,7 +8,8 @@
   },
   "tasks": {
     "dev": "deno run --allow-read --allow-write --allow-net watch.js",
-    "build": "deno run --allow-read --allow-write build.js",
+    "build": "deno run --allow-read --allow-write --allow-env build.js",
+    "build:prod": "PRODUCTION=true deno run --allow-read --allow-write --allow-env build.js",
     "deploy": "deno run --allow-read --allow-write --allow-net --allow-env --allow-run deploy.js"
   }
 }
