--- a/deno.json
+++ b/deno.json
@@ -7,7 +7,7 @@
     "@layouts/": "./layouts/"
   },
   "tasks": {
-    "dev": "deno run --allow-read --allow-write --allow-net watch.js",
+    "dev": "deno run --allow-read --allow-write --allow-net --allow-env watch.js",
     "build": "deno run --allow-read --allow-write --allow-env build.js",
     "build:prod": "PRODUCTION=true deno run --allow-read --allow-write --allow-env build.js",
     "deploy": "deno run --allow-read --allow-write --allow-net --allow-env --allow-run deploy.js"
