--- a/root/manifest.json
+++ b/root/manifest.json
@@ -4,8 +4,8 @@
   "description": "High-performance carbon nanotube materials from Industrial CNT LLC",
   "start_url": "/",
   "display": "standalone",
-  "background_color": "#1a1a1a",
-  "theme_color": "#f28337",
+  "background_color": "#000000",
+  "theme_color": "#000000",
   "icons": [
     {
       "src": "/images/icon-192.png",
