--- a/deno.json
+++ b/deno.json
@@ -6,6 +6,12 @@
     "@components/": "./components/",
     "@layouts/": "./layouts/"
   },
+  "exclude": [
+    "site/",
+    "archive/",
+    "videos/",
+    "audios/"
+  ],
   "tasks": {
     "dev": "deno run --allow-read --allow-write --allow-net --allow-env watch.js",
     "build": "deno run --allow-read --allow-write --allow-env build.js",
